--- a/src/core/ctrl/apax.yml
+++ b/src/core/ctrl/apax.yml
@@ -1,5 +1,5 @@
 name: "@ix-ax/axopen.core"
-version                                                                                                                                                                                 : '0.1.4-83-Add-documentation-for-AxoMessenger.65'
+version                                                                                                                                                                                        : '0.1.4-alpha.66'
 type: lib
 targets:
   #  - "1500"
@@ -15,6 +15,6 @@ scripts:
     - dotnet ixc
 dependencies:
   "@ax/system-timer": 3.0.9
-  "@ix-ax/axopen.abstractions"         : '0.1.4-83-Add-documentation-for-AxoMessenger.65'
+  "@ix-ax/axopen.abstractions"                : '0.1.4-alpha.66'
   "@ax/axunit-library": ^4.0.6
  
