refactor of tests, some minor changes

--- a/src/security/tests/axopen_security_tests/axopen_security_tests.csproj
+++ b/src/security/tests/axopen_security_tests/axopen_security_tests.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\base\src\AXOpen.Base.Abstractions\AXOpen.Base.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\data\src\repositories\InMemory\AXOpen.Data.InMemory.csproj" />
+    <ProjectReference Include="..\..\src\axopen_security_blazod\axopen_security_blazor.csproj" />
   </ItemGroup>
 
 </Project>
