--- a/docfx/articles/toc.yml
+++ b/docfx/articles/toc.yml
@@ -25,3 +25,8 @@
     href: ~/articles/core/AXOCOMPONENT.md  
 - name: AXOpen.Data
   href: ~/articles/data/README.md
+- name: AXOpen.Security
+  href: ~/articles/security/README.md  
+  items:
+  - name: Installation
+    href: ~/articles/security/INSTALLATION.md
