--- a/docfx/articles/toc.yml
+++ b/docfx/articles/toc.yml
@@ -25,6 +25,11 @@
     href: ~/articles/core/AXOCOMPONENT.md  
 - name: AXOpen.Data
   href: ~/articles/data/README.md
+  items:
+  - name: Data exchange
+    href: ~/articles/data/AxoDataExchange.md
+  - name: Data fragmets exchange
+    href: ~/articles/data/AxoDataFragmentExchange.md
 - name: AXOpen.Messaging
   href: ~/articles/messaging/README.md
   items:
