--- a/src/base/tests/AXOpen.Base.AbstractionsTests/AXOpen.Base.AbstractionsTests.csproj
+++ b/src/base/tests/AXOpen.Base.AbstractionsTests/AXOpen.Base.AbstractionsTests.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AXOpen.Base.Abstractions\AXOpen.Base.Abstractions.csproj" />
+    <ProjectReference Include="..\..\src\AXOpen.Base.Abstractions\AXOpen.Base.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
