--- a/src/core/ctrl/apax.yml
+++ b/src/core/ctrl/apax.yml
@@ -16,5 +16,6 @@ scripts:
 dependencies:
   "@ax/system-timer": 3.0.9
   "@ix-ax/axopen.abstractions"                : '0.1.4-alpha.66'
+  "@ix-ax/axopen.messaging"          : '0.1.4-alpha.66'
   "@ax/axunit-library": ^4.0.6
  
