--- a/src/core/ctrl/apax.yml
+++ b/src/core/ctrl/apax.yml
@@ -1,5 +1,5 @@
 name: "@ix-ax/axopen.core"
-version                                                                                                                                                                                        : '0.1.4-alpha.66'
+version                                                                                                                                                                                         : '0.1.4-remove-core-deps-in-messaging.79'
 type: lib
 targets:
   #  - "1500"
@@ -15,6 +15,7 @@ scripts:
     - dotnet ixc
 dependencies:
   "@ax/system-timer": 3.0.9
-  "@ix-ax/axopen.abstractions"                : '0.1.4-alpha.66'
+  "@ix-ax/axopen.abstractions"                 : '0.1.4-remove-core-deps-in-messaging.79'
+  "@ix-ax/axopen.messaging"           : '0.1.4-remove-core-deps-in-messaging.79'
   "@ax/axunit-library": ^4.0.6
  
