--- a/src/messaging/src/AXOpen.Messaging/ix_ax_axopen_messaging.csproj
+++ b/src/messaging/src/AXOpen.Messaging/ix_ax_axopen_messaging.csproj
@@ -22,6 +22,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\abstractions\src\AXOpen.Abstractions\ix_ax_axopen_abstractions.csproj" />
+	  <ProjectReference Include="..\..\..\base\src\AXOpen.Base.Abstractions\AXOpen.Base.Abstractions.csproj" />
 	  <ProjectReference Include="..\..\..\utils\src\AXOpen.Utils\ix_ax_axopen_utils.csproj" />
 	</ItemGroup>
 
