--- a/src/abstractions/ctrl/apax.yml
+++ b/src/abstractions/ctrl/apax.yml
@@ -1,16 +1,14 @@
 name: "@ix-ax/axopen.abstractions"
-version                                                                                                                                                                                                              : '0.1.4-remove-core-deps-in-messaging.79'
+version: '0.1.4-remove-core-deps-in-messaging.79'
 type: lib
 targets:
-  - "1500"
   - axunit-llvm
-  - llvm
 files:
-  - bin
+  - src
 devDependencies:
-  "@ax/sdk": 3.0.18
+  "@ax/sdk": ^4.0.1
 dependencies:
-  "@ax/system-strings": ^4.2.3
-scripts:  
+  "@ax/system-strings": ^5.0.12
+scripts:
   postbuild:
     - dotnet ixc
