--- a/src/apax.yml
+++ b/src/apax.yml
@@ -1,7 +1,3 @@
-name: "inxton.ix"
+name: "ix-ax"
 version: 0.1.0
 type: workspace
-dependencies:
-  "@ax/opcua-server-config": ^0.2.1
-  "ix.core": ^0.0.0
-  "ix.abstractions": ^0.0.0
