--- a/src/core/ctrl/apax.yml
+++ b/src/core/ctrl/apax.yml
@@ -1,20 +1,17 @@
 name: "@ix-ax/axopen.core"
-version                                                                                                                                                                                         : '0.1.4-remove-core-deps-in-messaging.79'
+version: '0.1.4-remove-core-deps-in-messaging.79'
 type: lib
 targets:
-  #  - "1500"
-  #  - llvm
   - axunit-llvm
-  - llvm
 files:
   - src
 devDependencies:
-  "@ax/sdk": 3.0.18  
+  "@ax/sdk": ^4.0.1
 scripts:
   postbuild:
     - dotnet ixc
 dependencies:
-  "@ax/system-timer": 3.0.9  
-  "@ix-ax/axopen.messaging"           : '0.1.4-remove-core-deps-in-messaging.79'
-  "@ax/axunit-library": ^4.0.6
- 
+  "@ax/system-timer": ^4.0.1
+  "@ix-ax/axopen.abstractions": '0.1.4-remove-core-deps-in-messaging.79'
+  #"@ax/axunit-library": ^4.0.6
+
