--- a/src/data/ctrl/apax.yml
+++ b/src/data/ctrl/apax.yml
@@ -2,16 +2,13 @@ name: "@ix-ax/axopen.data"
 version                                                                                                                                                                                                                                           : '0.1.4-remove-core-deps-in-messaging.79'
 type: lib
 targets:
-#  - "1500"
   - axunit-llvm
-  - llvm
 files:
   - src
 dependencies:
   "@ix-ax/axopen.core"                                                                                                                                                                                                       : '0.1.4-remove-core-deps-in-messaging.79'
-  "@ax/axunit-library": ^4.0.6
 devDependencies:
-  "@ax/sdk": 3.0.18
+  "@ax/sdk": ^4.0.1
 scripts:  
   postbuild: 
     - dotnet ixc
