--- a/src/integrations/ctrl/apax.yml
+++ b/src/integrations/ctrl/apax.yml
@@ -2,19 +2,14 @@ name: "axopen.integrations"
 version                                                                                                                                                                                        : '0.1.4-remove-core-deps-in-messaging.79'
 type: app
 targets:
-#  - "1500"
-  - plcsim
-  - axunit-llvm
-  - llvm
+  - "1500"
+  - plcsim  
 devDependencies:
-  "@ax/sdk": 3.0.18
-  "@ax/sld": ^0.14.2
-
+  "@ax/sdk": ^4.0.1  
 dependencies:  
   "@ix-ax/axopen.data"                : '0.1.4-remove-core-deps-in-messaging.79'
   "@ix-ax/axopen.probers"             : '0.1.4-remove-core-deps-in-messaging.79'  
   "@ix-ax/axopen.simatic1500"         : '0.1.4-remove-core-deps-in-messaging.79'
-  "@ax/axunit-library"          : ^4.0.6
 
 variables:
   APAX_BUILD_ARGS: [ -d ]
