--- a/src/templates.simple/axosimple.app/axosimple.hmi.csproj
+++ b/src/templates.simple/axosimple.app/axosimple.hmi.csproj
@@ -26,11 +26,12 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\axsharp\src\AXSharp.connectors\src\AXSharp.Connector.S71500.WebAPI\AXSharp.Connector.S71500.WebAPI.csproj" />
+    <ProjectReference Include="..\..\..\..\axsharp\src\AXSharp.connectors\src\AXSharp.Connector\AXSharp.Connector.csproj" />
     <ProjectReference Include="..\..\base\src\AXOpen.Logging\AXOpen.Logging.Serilog.csproj" />
     <ProjectReference Include="..\..\core\src\AXOpen.Core.Blazor\axopen_core_blazor.csproj" />
     <ProjectReference Include="..\..\data\src\AXOpen.Data.Blazor\axopen_data_blazor.csproj" />
     <ProjectReference Include="..\..\data\src\repositories\InMemory\AXOpen.Data.InMemory.csproj" />
-    <ProjectReference Include="..\..\messaging\src\AXOpen.Messaging.Blazor\axopen_messaging_blazor.csproj" />
     <ProjectReference Include="..\axosimple.twin\axosimple.csproj" />
   </ItemGroup>
 </Project>
