--- a/src/utils/ctrl/apax.yml
+++ b/src/utils/ctrl/apax.yml
@@ -1,17 +1,14 @@
 name: "@ix-ax/axopen.utils"
-version                                                                                                                                                                                           : '0.1.4-remove-core-deps-in-messaging.79'
+version: '0.1.4-remove-core-deps-in-messaging.79'
 type: lib
 targets:
-  #  - "1500"
   - axunit-llvm
-  - llvm
 files:
   - src
 devDependencies:
-  "@ax/sdk": 3.0.18
+  "@ax/sdk": ^4.0.1
 scripts:
   postbuild:
     - dotnet ixc
 dependencies:
-  "@ax/system-serde": ^1.3.13
-  "@ax/axunit-library": ^4.0.6
+   "@ax/system-serde": ^2.0.2
