--- a/src/templates.simple/ctrl/apax.yml
+++ b/src/templates.simple/ctrl/apax.yml
@@ -7,7 +7,8 @@ targets:
   - "1500"
   - plcsim
 devDependencies:
-  "@ax/sdk": ^4.0.1  
+  "@ax/sdk": ^3.0.18 
+  "@ax/sld": ^0.15.9  
 dependencies:   
    "@ix-ax/axopen.data"                         : '0.1.4-remove-core-deps-in-messaging.79'   
    "@ix-ax/axopen.simatic1500"                  : '0.1.4-remove-core-deps-in-messaging.79'
