--- a/src/core/src/AXOpen.Core.Blazor/axopen_core_blazor.csproj
+++ b/src/core/src/AXOpen.Core.Blazor/axopen_core_blazor.csproj
@@ -32,4 +32,8 @@
 	  <ProjectReference Include="..\AXOpen.Core\ix_ax_axopen_core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="AxoMessenger\" />
+  </ItemGroup>
+
 </Project>
