--- a/src/templates.simple/ctrl/apax.yml
+++ b/src/templates.simple/ctrl/apax.yml
@@ -1,17 +1,18 @@
 name: "axosimple"
-version                        : '0.1.4-remove-core-deps-in-messaging.79'
+version                            : '0.1.4-89--NEW-FEATURE-User-and-events-logging.89'
 type: app
 registries:
   '@ix-ax': https://npm.pkg.github.com/  
 targets:
   - "1500"
   - plcsim
+  - axunit-llvm
 devDependencies:
   "@ax/sdk": ^3.0.18 
   "@ax/sld": ^0.15.9  
 dependencies:   
-   "@ix-ax/axopen.data"                         : '0.1.4-remove-core-deps-in-messaging.79'   
-   "@ix-ax/axopen.simatic1500"                  : '0.1.4-remove-core-deps-in-messaging.79'
+   "@ix-ax/axopen.data"                             : '0.1.4-89--NEW-FEATURE-User-and-events-logging.89'
+   "@ix-ax/axopen.simatic1500"                      : '0.1.4-89--NEW-FEATURE-User-and-events-logging.89'
 
 variables:
   APAX_BUILD_ARGS: [ -d ]    
