--- a/src/utils/ctrl/apax.yml
+++ b/src/utils/ctrl/apax.yml
@@ -1,5 +1,5 @@
 name: "@ix-ax/axopen.utils"
-version       : '0.1.4-89--NEW-FEATURE-User-and-events-logging.89'
+version        : '0.1.4-alpha.79'
 type: lib
 targets:
   - axunit-llvm
