--- a/src/security/src/AXOpen.Security.Blazor/AXOpen.Security.Blazor.csproj
+++ b/src/security/src/AXOpen.Security.Blazor/AXOpen.Security.Blazor.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>net7.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
@@ -12,9 +12,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\base\src\AXOpen.Base.Abstractions\AXOpen.Base.Abstractions.csproj" />
+	  <ProjectReference Include="..\AXOpen.Security\AXOpen.Security.csproj" />
   </ItemGroup>
-
-
-
 </Project>
