--- a/src/data/src/repositories/Json/AXOpen.Data.Json.csproj
+++ b/src/data/src/repositories/Json/AXOpen.Data.Json.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
-		<TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+		<TargetFrameworks>net7.0</TargetFrameworks>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="GitVersion.MsBuild" Version="5.10.3">
