--- a/src/templates.simple/ctrl/apax.yml
+++ b/src/templates.simple/ctrl/apax.yml
@@ -6,7 +6,7 @@ registries:
 targets:
   - "1500"
   - plcsim
-  - axunit-llvm
+  - axunit-llvm 
 devDependencies:
   "@ax/sdk": ^3.0.18 
   "@ax/sld": ^0.15.9  
@@ -27,5 +27,5 @@ scripts:
     - apax build
     # Here you will need to set the argumen -t to your plc OP and -i to platfrom you are dowloading to
     # --default-server-interface is a must if you are using WebAPI      
-    - apax sld --accept-security-disclaimer -t 192.168.0.4 -i .\\bin\\plcsim\\ -r --default-server-interface    
+    - apax sld --accept-security-disclaimer -t 192.168.0.3 -i .\\bin\\SWCPU\\ -r --default-server-interface    
 
