Adds user information to the logging - security split in two different assemblies (blazor, clr) - adds information about user perfoming actions. - removers user info from the app object (must be provided as argument of log function) - adds logging from AxoTask and AxoToggle task - context logger now creates a log entry when an message/alarm occurs - in controller loggers we will need to address the objects identity

--- a/src/core/src/AXOpen.Core.Blazor/axopen_core_blazor.csproj
+++ b/src/core/src/AXOpen.Core.Blazor/axopen_core_blazor.csproj
@@ -36,4 +36,10 @@
     <Folder Include="AxoMessenger\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Components.Authorization">
+      <HintPath>..\..\..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\7.0.4\Microsoft.AspNetCore.Components.Authorization.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
