--- a/src/integrations/ctrl/apax.yml
+++ b/src/integrations/ctrl/apax.yml
@@ -1,17 +1,17 @@
 name: "axopen.integrations"
-version                                                                                                                                                                                             : '0.1.4-alpha.79'
+version: '0.1.4-alpha.79'
 type: app
 targets:
   - "1500"
-  - plcsim  
+  - plcsim
   - axunit-llvm
 devDependencies:
-  "@ax/sdk": ^3.0.18  
-  "@ax/sld": ^0.15.9 
-dependencies:  
-  "@ix-ax/axopen.data"                     : '0.1.4-alpha.79'
-  "@ix-ax/axopen.probers"                  : '0.1.4-alpha.79'
-  "@ix-ax/axopen.simatic1500"              : '0.1.4-alpha.79'
+  "@ax/sdk": ^4.0.2
+  "@ax/sld": ^0.15.9
+dependencies:
+  "@ix-ax/axopen.data": '0.1.4-alpha.79'
+  "@ix-ax/axopen.probers": '0.1.4-alpha.79'
+  "@ix-ax/axopen.simatic1500": '0.1.4-alpha.79'
 
 variables:
   APAX_BUILD_ARGS: [ -d ]
@@ -45,7 +45,8 @@ scripts:
   postbuild:
     - apax ixc
   watch:
-    - dotnet watch --project ..\\src\\AXOpen.Integrations.Blazor\\axopen_integrations_blazor.csproj
+    - dotnet watch --project
+      ..\\src\\AXOpen.Integrations.Blazor\\axopen_integrations_blazor.csproj
   rr:
     - apax build
     - apax download
