--- a/src/security/src/AXOpen.Security.Blazor/AXOpen.Security.Blazor.csproj
+++ b/src/security/src/AXOpen.Security.Blazor/AXOpen.Security.Blazor.csproj
@@ -23,4 +23,10 @@
   <ItemGroup>
 	  <ProjectReference Include="..\AXOpen.Security\AXOpen.Security.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="AXSharp.Abstractions">
+      <HintPath>..\..\..\..\..\axsharp\src\AXSharp.abstractions\src\AXSharp.Abstractions\obj\Debug\net7.0\ref\AXSharp.Abstractions.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
