--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -5,7 +5,7 @@
     "priority": 0.1
   },
   "homepages": [],
-  "source_base_path": "C:/W/Develop/gh/ix-ax/axopen/docfx",
+  "source_base_path": "C:/W/Develop/gh/ix-ax/AXOpen/docfx",
   "xrefmap": "xrefmap.yml",
   "files": [
     {
@@ -33,7 +33,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Core.AxoComponentCommandView.html",
-          "hash": "yZYfiepVRR5hHlr8XxXKtxHTsLzPWp5Mi2nWVkmTboQ="
+          "hash": "j/zALKYcvJUIeoZ+3aqPThEfExHUXLX2fPLFzPt+zQ8="
         }
       },
       "version": ""
@@ -44,7 +44,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Core.AxoComponentStatusView.html",
-          "hash": "5EimZ4KkhDJxuavEXEvj7/ralzcSjH5BIm7UfqHHKtY="
+          "hash": "1Xcy/w2hW8PYEmAQnJFXrMw90QqLz2d7zPv4Nl2JAEU="
         }
       },
       "version": ""
@@ -55,7 +55,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Core.AxoComponentView.html",
-          "hash": "hC7m+W0RNziyNS2vVISPQRvl+/xebcma3yiQrzR7WVw="
+          "hash": "gvrG+diwH//eZVSIXywyykr5Re0eAJI3LMjc9UNvDXo="
         }
       },
       "version": ""
@@ -99,7 +99,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Core.AxoMomentaryTaskCommandView.html",
-          "hash": "J2qEpKEyBSulG44u8C4laAAJrzk7jBt62TW+1UpHr5c="
+          "hash": "gDdgRZpRZ7SggeRxrIO/pGAPG7P4Ib4zdEukUfJumx0="
         }
       },
       "version": ""
@@ -110,7 +110,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Core.AxoMomentaryTaskStatusView.html",
-          "hash": "9OYcbb2PwXpH+XH9tBPRn5N8WEN+iNgV70RrSY0Kg/Q="
+          "hash": "z0Dmul+EM/XselOsbhUU8WP2BQgYR/G12LvwZxVaQzw="
         }
       },
       "version": ""
@@ -121,7 +121,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Core.AxoMomentaryTaskView.html",
-          "hash": "M0c1G8LA+BnmhTQhZoSb9yfjARNugYR3TWowH59r97s="
+          "hash": "OO7C2MSX0+h9zZAJ/q2razMNK4hUx1IQariTTxffgtE="
         }
       },
       "version": ""
@@ -165,7 +165,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Core.AxoSequencerCommandView.html",
-          "hash": "fAizRkTkKRDVuwy59zmEzUJUuy4GsANEVOQSOPefIIs="
+          "hash": "A7Ru64sXIzB/W5qlsgRNAWsUKICxeQtMOHp3ASWLAZw="
         }
       },
       "version": ""
@@ -187,7 +187,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Core.AxoSequencerStatusView.html",
-          "hash": "qA7LImkapDPBNSgFMbsZxcCWXTt+ZcbLcschypIctUo="
+          "hash": "R68PDhEN9ODqTSRE1zOdCUs7alhaRngehuHq/YaxH2U="
         }
       },
       "version": ""
@@ -198,7 +198,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Core.AxoSequencerView.html",
-          "hash": "1GXF495LS2d2S8wDgZ754J1UV5ydd/4LX/DC2ZNzDoM="
+          "hash": "9Lt9AraZ0GUTedPYz2KBVcCi4kPYbOz5Wa/hRMG6wh0="
         }
       },
       "version": ""
@@ -220,7 +220,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Core.AxoStepCommandView.html",
-          "hash": "lEks4siJvdLwLS0gV9qJyIQJqJbX7ravCPcQumLP8Sk="
+          "hash": "bYDUophPzKKZwhj0u1Z8U8HmJvD2g/5b3bfvnXHGgqs="
         }
       },
       "version": ""
@@ -231,7 +231,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Core.AxoStepStatusView.html",
-          "hash": "R0fNpve8lg8bx+t/yL2HKH1/QSwfOp/l1jzOJKiSvJ4="
+          "hash": "NP/XtPZf7lAZDKpiCzai4+VHBEFm6zXXgrUxr39Tt5g="
         }
       },
       "version": ""
@@ -242,7 +242,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Core.AxoStepView.html",
-          "hash": "Jz/lfaNc9bQDly7GfxFzduBDGYjRo5OCH7Ey9Soj3P8="
+          "hash": "rn6xFDrl1plaIaZVnReAr7nkuh+pBahpnzBHo3dRPP8="
         }
       },
       "version": ""
@@ -264,7 +264,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Core.AxoTaskCommandView.html",
-          "hash": "1SylbHhPeMg495GwL3V/AXfXFUjENKF7JhCbB+0Jd2o="
+          "hash": "bTUaEs6ixvFBC8mnUKEV7bvgmOKzz6VjLX2tDSj+Gg4="
         }
       },
       "version": ""
@@ -275,7 +275,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Core.AxoTaskStatusView.html",
-          "hash": "tsI4bRCinfmtd1HqB5m35UPN+Jguy61tIHRPOftubd8="
+          "hash": "OUVxh9Isq80tgRD4szc9Ld86HRBMFu/fJne3ZPx6Egc="
         }
       },
       "version": ""
@@ -286,7 +286,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Core.AxoTaskView.html",
-          "hash": "sDq/sXKoLWPJGuosL/ztXjJwVT94L/ndRP4Q2T1ohA0="
+          "hash": "ADrA5W7tH+1497UPYDrZdJFfLRMRjVkR9Zvu/xvSfOA="
         }
       },
       "version": ""
@@ -308,7 +308,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Core.AxoToggleTaskCommandView.html",
-          "hash": "b6Ce3YGjjEJhfDCZe+4dF23BFsrNrSobHhYEKRI8kO4="
+          "hash": "/Sk2DViF8c6fJCx/TEFUJZf0QrvtcQWQFgOj2wJ1x9U="
         }
       },
       "version": ""
@@ -319,7 +319,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Core.AxoToggleTaskStatusView.html",
-          "hash": "kiTxEO7/RZBPmNVnlCmP4mrjnaWw4zGPSAxouZAV9VI="
+          "hash": "zbI9tXW1dvKdG/Kj5By4zH7dyeL26Zy81l29qpTgr3E="
         }
       },
       "version": ""
@@ -330,7 +330,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Core.AxoToggleTaskView.html",
-          "hash": "yK2RnZ0H5OTyWxZ3Wb+XcBC9Ci30qVg/KfBrIk+wdp8="
+          "hash": "yzDmDqjYApaFDl88B9SEShQfVNLJAwxp4mJgbVnHjDY="
         }
       },
       "version": ""
@@ -535,17 +535,6 @@
     },
     {
       "type": "ManagedReference",
-      "source_relative_path": "api/AXOpen.Core.ToastMessage.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api/AXOpen.Core.ToastMessage.html",
-          "hash": "PebANP93qA3aHk2iS/NvOTq58G2NxsejiR3Zwd2zHqM="
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
       "source_relative_path": "api/AXOpen.Core._NULL_CONTEXT.yml",
       "output": {
         ".html": {
@@ -590,50 +579,6 @@
     },
     {
       "type": "ManagedReference",
-      "source_relative_path": "api/AXOpen.Core.blazor.Toaster.Toast.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api/AXOpen.Core.blazor.Toaster.Toast.html",
-          "hash": "JJPs0IYY4RzNfE4J7aSnqqrFsliSu4dxHWbm+DQUIBM="
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api/AXOpen.Core.blazor.Toaster.ToastService.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api/AXOpen.Core.blazor.Toaster.ToastService.html",
-          "hash": "6H6TbZVyQBdn9JrRqpUNnPW4Nqg+Xs5Yw8F2fg58O9w="
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api/AXOpen.Core.blazor.Toaster.Toaster.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api/AXOpen.Core.blazor.Toaster.Toaster.html",
-          "hash": "lmEcmwr4Yno6vB6ANHXQN90/d3lFFvsN+xp6gg031BM="
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api/AXOpen.Core.blazor.Toaster.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api/AXOpen.Core.blazor.Toaster.html",
-          "hash": "Jp0JOOw3KHdJy6VRIqEnkFi2WfcsfitbJ/j1NOh2fI8="
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
       "source_relative_path": "api/AXOpen.Core.eAxoSequenceMode.yml",
       "output": {
         ".html": {
@@ -671,7 +616,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Core.html",
-          "hash": "UqnHbb7i7Z4vN3+dWBEa+xBzsj4/bndzo+ckRFDc7Lk="
+          "hash": "OYqpN29Qug+kSwRrPt6uD5d2u+MQHxRRnHKGbr4mnbI="
         }
       },
       "version": ""
@@ -759,7 +704,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Data.AxoDataExchangeBaseCommandView.html",
-          "hash": "gYpp2DFei8j+qMXuIhwKFe36CP7aWzPZOvB3Q8NoGk4="
+          "hash": "qB1p8jgxjiPr7POgpwtC386V3ZOrGMHwYQckgZ4DZxg="
         }
       },
       "version": ""
@@ -770,7 +715,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Data.AxoDataExchangeBaseStatusView.html",
-          "hash": "q/iE7wxAtEgddPs1Wl5Jrb7k/7zO/vGfQ6/QyR8Vlfw="
+          "hash": "XpD58fWpB3fpXAjH4n6rbH3eJSWwMgEnmUGckos6c8Y="
         }
       },
       "version": ""
@@ -858,7 +803,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Data.DataExchangeView.html",
-          "hash": "YbbwqUSiBlS7vvgpxWtfrjnYyCEfuqYVV+tNuGLQRYQ="
+          "hash": "p718ou/7s98iqHBLp/KPkbWl5W2ZdFSKvQLf90wCA7M="
         }
       },
       "version": ""
@@ -869,7 +814,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Data.DataExchangeViewModel.html",
-          "hash": "yzTTHLCJn3Hg3Ws9jFjY0QqJczpl7+8Lvx+vnRrl0io="
+          "hash": "409N9Kp7Y5EOZ3CuWpXo9P/zOVFuAvZ1JQ1Nvy2iw7o="
         }
       },
       "version": ""
@@ -979,7 +924,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Data.Interfaces.IDataViewModel.html",
-          "hash": "/8tg9sb77STfrVNkNI0HNF09ig5V6Rg/ZJV0Fat2UiQ="
+          "hash": "MQYnH5e+IBdLnUYna+X+KsOfFUJYKvl8IHTVoHd+468="
         }
       },
       "version": ""
@@ -1320,7 +1265,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Messaging.Static.AxoMessengerCommandView.html",
-          "hash": "1NgaXajWGcAKPxo3PdaPusumJ6wjnU7vxSmHhQZupdg="
+          "hash": "UkeamwuQquYoY3cwzwzOdrd15Cb2NhyMKVG4Cyc+SAQ="
         }
       },
       "version": ""
@@ -1331,7 +1276,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Messaging.Static.AxoMessengerStatusView.html",
-          "hash": "m2e34ne7kVAtoL/YlZGmoDSpbZ+7NdjN3uxhfgbYT08="
+          "hash": "sgSBHHoWKfmlUCDBI9N0LFc4Ixwe9mIM0UdxEV9V5ds="
         }
       },
       "version": ""
@@ -1342,7 +1287,7 @@
       "output": {
         ".html": {
           "relative_path": "api/AXOpen.Messaging.Static.AxoMessengerView.html",
-          "hash": "kaw6WBqUAGGvY2wuA0VXiOFEohzSgkf+VJbTdv7UcW4="
+          "hash": "c+wOcGi4HhntM3qaj9NZNao0bvbUorhMWLCfZDFYjik="
         }
       },
       "version": ""
@@ -1442,6 +1387,50 @@
         ".html": {
           "relative_path": "api/AXOpen.Utils.html",
           "hash": "p0niB1Hg8WzDi+HISGgnAtf/AY6sc+l1x+FJ38P7WdU="
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog.AlertDialog.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog.AlertDialog.html",
+          "hash": "vV1B6rX0mRD5kaBl5G9BDEpYBd0AxIZzkrQCZZEgGtI="
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog.Toaster.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog.Toaster.html",
+          "hash": "j9NAMDrlS5I97hZBgNx2Ilas/qreiyq+HG7cjjMXmmI="
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog.ToasterService.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog.ToasterService.html",
+          "hash": "Xl3c5WvJdmEc0/zseNRn7Tcb0FIGJFPKzsOSCVNSTu4="
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog.html",
+          "hash": "vNQU9Eazug0ti+XGuWJU4qTQfFsK3ZWRXZgBtCWOJDk="
         }
       },
       "version": ""
@@ -2068,7 +2057,7 @@
       "output": {
         ".html": {
           "relative_path": "api/toc.html",
-          "hash": "nseAN+UgKRJ8RkNr37fWNvGtZYkTNknTJYgQ5LUTfrA="
+          "hash": "yYhhHTwzxHbM9ulTCzbOh9yfaDEJUeT+n2H8DEu8OG4="
         }
       },
       "version": ""
@@ -2724,6 +2713,17 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/core/ALERTDIALOG.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/core/ALERTDIALOG.html",
+          "hash": "k2OZRmvPD+MsOxm7e8FiskgrxEDcumx26pW3YOYPRxo="
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/core/AXOCOMPONENT.md",
       "output": {
         ".html": {
@@ -2838,7 +2838,7 @@
       "output": {
         ".html": {
           "relative_path": "articles/core/README.html",
-          "hash": "UyOjCK5KMFzPyDJqR6bwqa0+jUtbOyWMz2zHVplhFb0="
+          "hash": "CIQ+nbDpIv2tdKtYKrk2ey+bv/8ktCfLvLNHTul9p/E="
         }
       },
       "version": ""
@@ -2970,7 +2970,7 @@
       "output": {
         ".html": {
           "relative_path": "articles/toc.html",
-          "hash": "zdjARhhYJDdCjmVE5XihGvWuXYsB1iT8BzMhIDCY4eE="
+          "hash": "yL2G8xha5sZNOa5IdAYCTMlRC1+iLEHGHEd0JDppwe4="
         }
       },
       "version": ""
@@ -2981,6 +2981,16 @@
       "output": {
         "resource": {
           "relative_path": "images/AccountManagement.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "images/AlertDialog.png",
+      "output": {
+        "resource": {
+          "relative_path": "images/AlertDialog.png"
         }
       },
       "version": ""
