Documentation to localization

--- a/docfx/articles/toc.yml
+++ b/docfx/articles/toc.yml
@@ -47,4 +47,6 @@
   items:
   - name: Installation
     href: ~/articles/security/INSTALLATION.md
+- name: Template localization
+  href: ~/articles/localization/README.md
 
