Cognex dataman readear, very first release ready to test with the hardware

--- a/src/integrations/ctrl/apax.yml
+++ b/src/integrations/ctrl/apax.yml
@@ -11,7 +11,8 @@ devDependencies:
 dependencies:
   "@ix-ax/axopen.data": '0.1.4-alpha.79'
   "@ix-ax/axopen.probers": '0.1.4-alpha.79'
-  "@ix-ax/axopen.simatic1500": '0.1.4-alpha.79'
+  "@ix-ax/axopen.simatic1500": '0.1.4-alpha.79'  
+  "@ix-ax/axopen.cognex.vision": '0.1.4-alpha.79'
 
 variables:
   APAX_BUILD_ARGS: [ -d ]
