added first implementation of analogue. digital inspectors, added comprehensive result, wip on data inspectors

--- a/src/inspectors/src/AxOpen.Inspectors.Blazor/AxOpen.Inspectors.Blazor.csproj
+++ b/src/inspectors/src/AxOpen.Inspectors.Blazor/AxOpen.Inspectors.Blazor.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\AxOpen.Inspectors\AxOpen.Inspectors.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="AxoDataInspector\" />
+  </ItemGroup>
+
 </Project>
