--- a/src/templates.simple/ctrl/apax.yml
+++ b/src/templates.simple/ctrl/apax.yml
@@ -12,6 +12,7 @@ devDependencies:
   "@ax/sld": ^0.15.9
 dependencies:
   "@ix-ax/axopen.data": '0.1.4-alpha.79'
+  "@ix-ax/axopen.inspectors": '0.1.4-alpha.79'
   "@ix-ax/axopen.simatic1500": '0.1.4-alpha.79'
 
 variables:
