--- a/src/inspectors/ctrl/apax.yml
+++ b/src/inspectors/ctrl/apax.yml
@@ -14,3 +14,4 @@ scripts:
 dependencies:
   "@ax/system-timer": ^4.0.1
   "@ix-ax/axopen.core": '0.1.4-alpha.79'
+  "@ix-ax/axopen.simatic1500": '0.1.4-alpha.79'
